# dto-rs

./: .appveyor.yml  .travis.yml  Cargo.toml  README.md  index.html  search-index.js
fractal_dto/: DTO.t.html  FromDTO.t.html  index.html  sidebar-items.js  trait.DTO.html  trait.FromDTO.html
fractal_dto/error/: FromDTOError.t.html  index.html  sidebar-items.js  struct.FromDTOError.html
fractal_dto/v1/: ResponseDTO.t.html  index.html  sidebar-items.js  struct.ResponseDTO.html
fractal_dto/v1/friends/: ConfirmFriendRequestDTO.t.html  FriendRequestDTO.t.html  PendingFriendRequestDTO.t.html  Relationship.t.html  RelationshipDTO.t.html  enum.RelationshipDTO.html  index.html  sidebar-items.js  struct.ConfirmFriendRequestDTO.html  struct.FriendRequestDTO.html  struct.PendingFriendRequestDTO.html  type.Relationship.html
fractal_dto/v1/oauth/: ScopeDTO.t.html  (+11 more)
fractal_utils/: CURRENCY_SYMBOL.v.html  constant.CURRENCY_SYMBOL.html  index.html
fractal_utils/amount/: AmountParseError.t.html  index.html  struct.Amount.html  struct.AmountParseError.html
fractal_utils/location/: index.html  struct.Address.html
fractal_utils/wallet_address/: WALLET_ADDRESS_LEN.v.html  WalletAddress.t.html  WalletAddressParseError.t.html  constant.WALLET_ADDRESS_LEN.html  index.html  struct.WalletAddress.html  struct.WalletAddressParseError.html
implementors/fractal_dto/: trait.DTO.js
implementors/num_integer/: trait.Integer.js
implementors/num_traits/: trait.Num.js
implementors/rand/: trait.Rand.js
rust_base58/: index.html
rust_base58/base58/: enum.FromBase58Error.html  index.html  trait.FromBase58.html  trait.ToBase58.html
src/: error.rs  lib.rs
src/fractal_utils/: amount.rs.html  lib.rs.html  location.rs.html  wallet_address.rs.html
src/v1/: friends.rs  mod.rs  oauth.rs  otp.rs  public.rs  transactions.rs  user.rs
(+90 files in other folders)
