[package]
name = "fractal-dto"
version = "0.0.6"
authors = [
    "Eric Remigino <eric@fractal.global>",
    "Iban Eguia <iban@fractal.global>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/FractalGlobal/dto-rs"
documentation = "http://fractal.global/dto-rs"
description = """
DTO objects to transfer information in the Fractal Global Credits API.
"""
keywords = ["fractal", "global", "credits", "dto"]

[dependencies]
rustc-serialize = "^0.3"
chrono = "^0.2"
fractal-utils = "^0.1"
