[package]
name = "fractal-dto"
version = "0.9.0"
authors = [
    "Eric Remigino <eric@fractal.global>",
    "Iban Eguia <iban@fractal.global>",
]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/FractalGlobal/dto-rs"
documentation = "https://docs.rs/fractal-dto/"
description = """
DTO objects to transfer information in the Fractal Global Credits API.
"""
keywords = ["fractal", "global", "credits", "dto"]

[dependencies]
chrono = { version = "0.4.0", features = ["serde"]}
fractal-utils = { git = "https://github.com/tafia/utils-rs", branch = "v0.3.x" }
#fractal-utils = { version = "0.3.4", path = "../utils-rs" }
serde = "1.0.25"
serde_derive = "1.0.25"
